workspace-sf/force-app/main/default/objects/CriticaParceiro__c/CriticaParceiro__c.object-meta.xml
<CustomObject>
    <description>Objeto responsável por armazenar as críticas do parceiro</description>
    <label>Crítica do parceiro</label>
    <nameField>
        <label>Código</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Críticas do parceiro</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>