workspace-sf/force-app/main/default/objects/CriticaParceiro__c/fields/CodigoCriticaMotorRegras__c.field-meta.xml
<CustomField>
    <fullName>CodigoCriticaMotorRegras__c</fullName>
    <label>Código da Crítica no Motor de Regras</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>