workspace-sf/force-app/main/default/objects/CriticaParceiro__c/fields/IdentificacaoCampo__c.field-meta.xml
<CustomField>
    <fullName>IdentificacaoCampo__c</fullName>
    <label>Identificação do Campo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>