workspace-sf/force-app/main/default/objects/CriticaParceiro__c/fields/Parceiro__c.field-meta.xml
<CustomField>
    <fullName>Parceiro__c</fullName>
    <label>Parceiro</label>
    <referenceTo>Parceiro__c</referenceTo>
    <relationshipName>CriticasParceiro</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>