workspace-sf/force-app/main/default/objects/CriticaParceiro__c/fields/Rotulo__c.field-meta.xml
<CustomField>
    <fullName>Rotulo__c</fullName>
    <label>Rótulo</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>