workspace-sf/force-app/main/default/objects/CriticaParceiro__c/fields/TipoRegistro__c.field-meta.xml
<CustomField>
    <fullName>TipoRegistro__c</fullName>
    <label>Tipo de Registro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>